--- a/cmd/ogamed/template/header.html
+++ b/cmd/ogamed/template/header.html
@@ -13,6 +13,19 @@
 	.content {
 		margin: 10px;
 	}
+	
+	table {
+	  border-collapse: collapse;
+	}
+	
+	td {
+	  height: 50px;
+	  vertical-align: top;
+	}
+
+	table, th, td {
+	  border: 1px solid black;
+	}
 	</style>
 </head>
 
