--- a/cmd/ogamed/template/header.html
+++ b/cmd/ogamed/template/header.html
@@ -37,7 +37,8 @@
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="/">Bot</a></li>
-				<li><a href="/planets">Planets</a></li>
+				<li><a href="/empire">Empire</a></li>
+				<li><a href="/flights">Flights</a></li>
 				<li><a href="/browser">Browser</a></li>
 			</ul>
 		</div>
