--- a/cmd/ogamed/template/flights.html
+++ b/cmd/ogamed/template/flights.html
@@ -3,34 +3,36 @@
 <div class="content">
 	<h2>Main</h2>
 	<div>This is the Main Page!</div>
-	
-	<table>
-		{{range $k, $v := .Ships}}
-		<tr>
-		<td>{{$v.GetName}}</td>
-		<td><input id='{{$v.GetName}}' value='' /></td>
-		</tr>
-		{{end}}
-	</table>
-	
 	<div>
-		<form Method='GET'>
-			<select name='origin' onchange="this.form.submit();">
-				{{range $k, $v := .Bot.Planets}}
-					{{if eq $v.GetID  .SelectedPlanet}}
-					<option value=''>{{$v.GetName}} {{$v.GetCoordinate}}</option>
-					{{else}}
-					<option value=''>-- Select origin --</option>
+		<div>
+			<form Method='GET'>
+				<select name='origin' onchange="this.form.submit();">
+					<option value=''>--- Select Origin ---</option>
+					{{range $k, $v := .Bot.Planets}}
+						<option value='{{$v.GetID}}'>{{$v.GetID}} {{$v.GetCoordinate}}</option>
 					{{end}}
-					
-				{{end}}
-				{{range $k, $v := .Bot.Planets}}
-					{{if not eq $v.GetID  .SelectedPlanet}}
-					<option value='{{$v.GetID}}'>{{$v.GetName}} {{$v.GetCoordinate}}</option>
-					{{end}}
-				{{end}}
-			</select>
+				</select>
+			</form>
+		</div>
+		<form method="GET">
+			<input type="hidden" name="origin" value="{{.Origin.GetCoordinate}}"/>
+			<input type="submit" name="Submit" />
 		</form>
+
+		<div>
+		<table>
+			{{$PlanetShips := .PlanetShips}}
+			{{range $k, $v := .Ships}}
+			<tr>
+				<td>{{$v.GetName}}</td>
+				<td>
+					Maximal: ({{$.PlanetShips.ByID $v.GetID}})
+					<input id='{{$v.GetID}}' value='0' />
+				</td>
+			</tr>
+			{{end}}
+		</table>
+		</div>
 	</div>
 </div>
 {{template "footer" .}}
