--- a/cmd/ogamed/template/header.html
+++ b/cmd/ogamed/template/header.html
@@ -5,6 +5,8 @@
 	<title>OGame Bot</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<style type="text/css">
 	body {
 		padding-bottom: 70px;
@@ -38,6 +40,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/">Bot</a></li>
 				<li><a href="/empire">Empire</a></li>
+				<li><a href="/planet">Planet</a></li>
 				<li><a href="/flights">Flights</a></li>
 				<li><a href="/browser">Browser</a></li>
 			</ul>
